feat/generator: rollback changes to the last passing state and modify the model
