# src/main/java/com/hubsante/model/edxl/ContentMessage.java
@@ -15,16 +15,15 @@
  */
 package com.hubsante.model.edxl;
 
-import com.fasterxml.jackson.annotation.JsonFormat;
 import com.fasterxml.jackson.annotation.JsonSubTypes;
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import com.hubsante.model.common.ReferenceWrapper;
 import com.hubsante.model.custom.CustomMessage;
 import com.hubsante.model.cisu.*;
 import com.hubsante.model.emsi.EmsiWrapper;
-import com.hubsante.model.geolocalisation.positionUpdate.PositionUpdateWrapper;
-import com.hubsante.model.geolocalisation.resource.ResourceWrapper;
-import com.hubsante.model.geolocalisation.resourceDetails.ResourceDetailsWrapper;
+import com.hubsante.model.geopos.GeoPosWrapper;
+import com.hubsante.model.georeq.GeoReqWrapper;
+import com.hubsante.model.geores.GeoResWrapper;
 import com.hubsante.model.health.CreateCaseHealthWrapper;
 import com.hubsante.model.report.ErrorWrapper;
 
@@ -36,14 +35,9 @@ import com.hubsante.model.report.ErrorWrapper;
         @JsonSubTypes.Type(ErrorWrapper.class),
         @JsonSubTypes.Type(CustomMessage.class),
         @JsonSubTypes.Type(EmsiWrapper.class),
-        @JsonSubTypes.Type(PositionUpdateWrapper.class),
-        @JsonSubTypes.Type(ResourceWrapper.class),
-        @JsonSubTypes.Type(ResourceDetailsWrapper.class)
+        @JsonSubTypes.Type(GeoPosWrapper.class),
+        @JsonSubTypes.Type(GeoResWrapper.class),
+        @JsonSubTypes.Type(GeoReqWrapper.class)
 })
 public class ContentMessage {
-    @JsonFormat(with = JsonFormat.Feature.ACCEPT_SINGLE_VALUE_AS_ARRAY)
-    private PositionUpdateWrapper[] positionUpdateWrapper;
-
-    @JsonFormat(with = JsonFormat.Feature.ACCEPT_SINGLE_VALUE_AS_ARRAY)
-    private ResourceDetailsWrapper[] resourceDetailsWrapper;
 }
